fixed scrollbar of deck views

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -52,7 +52,7 @@
  
 .container_center_main {
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-    position: fixed;
+    position: absolute;
     top: 0;
     display: flex;
     align-items: center;
